# WHM_External_PowerDNS_Module

./: .gitignore  API2_OVERRIDE_WARNING.md  CHANGELOG.md  DEBUG_HOOKS.md  FILES_OVERVIEW.md  HOOK_LIMITATION_EXPLAINED.md  INSTALLATION.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SOLUTION_NOTES.md  TROUBLESHOOTING.md  debug_cgi.sh  fix_plugin_menu.sh  fix_plugin_registration.sh  install.sh  pyproject.toml  uninstall.sh
scripts/: check_hooks.sh  diagnose_dns.sh  fetch_zone_api.py  fix_config.py  list_zones_api.py  register_hooks.sh  sync_zones.py  test_api2_hook.sh  test_connection.py
scripts/hooks/: dns_add_record  dns_create_zone  dns_delete_record  dns_delete_zone  dns_fetch_zone  dns_list_zones  dns_update_record
src/ultahost_dns/: __init__.py  config.py  dns_template.py  logger.py  permissions.py  powerdns_client.py
src/ultahost_dns/api2/: Dns.pm
src/ultahost_dns/dnsadmin/: Remote.pm  Setup.pm  __init__.py
src/ultahost_dns/hooks/: DnsHooks.pm
tests/: __init__.py  test_config.py  test_powerdns_client.py
whm/cgi/: sync_zones.cgi  test_connection_ajax.cgi  ultahost_dns.conf  ultahost_dns_settings.cgi  ultahost_dns_settings_simple.cgi
whm/templates/: ultahost_dns_settings.tmpl
